# mobot

./: .gitignore  Cargo.toml  README.md  device.json
src/: config.rs  lib.rs  main.rs  result_handlers.rs  server.rs
src/database/: mod.rs  mysql.rs  redis.rs  surrealdb.rs
src/modules/: ban.rs  group_admin.rs  hello_module.rs  ignore.rs  menu.rs  mod.rs  types.rs
src/modules/game/: guessing_box.rs  help.rs  mod.rs  roulette.rs
src/modules/game/russian_roulette/: roulette.rs
src/modules/image_lib/: help.rs  mod.rs  wallpaper.rs  wife.rs
src/modules/manager/: ban.rs  ignore.rs  menu.rs  mobot.rs  mod.rs
src/modules/osu/: api.rs  bind.rs  client.rs  enums.rs  help.rs  info.rs  mod.rs
src/modules/ping/: ping.rs
src/modules/query/: mod.rs
src/modules/random_image/: mod.rs  random_pixiv_artworks.rs
src/modules/roulette/: mod.rs  roulette.rs
src/utils/: local.rs  mod.rs
