[package]
name = "mobot"
version = "0.1.0"
edition = "2021"
authors = ["Ns2Kracy <2220496937@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = "0.11.12"

serde_json = "1.0.87"
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-mem'] }
proc_qq = "0.1.19"
serde_derive = "1.0.147"
once_cell = "1.16.0"
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0.147", features = ["derive", "unstable"] }
rand = "0.8.5"
